# opencv

./: CMakeLists.txt
include/opencv4/opencv2/: cvconfig.h
lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake
